共有先のサーバー名を設定する機能を追加

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,19 @@
 			"js":["script.js"]
 		}
 	],
+	"action": {
+		"default_icon": {
+			"16": "icons/16.png",
+			"48": "icons/48.png",
+			"128": "icons/128.png"
+		},
+		"default_title": "共有先のサーバー名の設定",
+		"default_popup": "options.html"
+	},
+	"options_ui": {
+		"page": "options.html"
+	},
+	"permissions": ["storage"],
 	"author":"Alkappa/alpaca-honke",
 	"homepage_url":"https://github.com/alpaca-honke/twishare-to-io/"
 }
