--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 3,
-	"name":"Twishare to io",
-	"version":"0.0.2",
-	"description":"Twitter のシェアボタンから Misskey.io シェアすることができるようにします。",
+	"name":"Twishare to Misskey",
+	"version":"0.1.0",
+	"description":"Twitter のシェアボタンから Misskey にシェアすることができるようにします。",
 	"icons":{
 		"16":"icons/16.png", 
 		"48":"icons/48.png",
