--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"name":"Twishare to io",
+	"name":"Twishare to io for Firefox",
 	"version":"0.0.2",
 	"description":"Twitter のシェアボタンから Misskey.io シェアすることができるようにします。",
 	"icons":{
