Fix: manifest v2 の互換性のために、actionをpage_actionに変更

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
 			"js":["script.js"]
 		}
 	],
-	"action": {
+	"page_action": {
 		"default_icon": {
 			"16": "icons/16.png",
 			"48": "icons/48.png",
