--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
 	"name":"Twishare to Misskey for Firefox",
 	"version":"0.1.0",
 	"description":"Twitter のシェアボタンから Misskey.io シェアすることができるようにします。",
+	"applications": {
+		"gecko": {
+			"id": "alpaca-honke@example.com"
+		}
+	},
 	"icons":{
 		"16":"icons/16.png", 
 		"48":"icons/48.png",
