--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name":"Twishare to Misskey for Firefox",
 	"version":"0.1.0",
-	"description":"Twitter のシェアボタンから Misskey.io にシェアすることができるようにします。",
+	"description":"Twitter のシェアボタンから Misskey にシェアすることができるようにします。",
 	"browser_specific_settings": {
 		"gecko": {
 			"id": "twishare-to-misskey-for-firefox@alpaca-honke"
