Fix: actionをpage_actionに修正

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
 		"scripts": ["background.js"],
 		"persistent": true
 	},
-	"action": {
+	"page_action": {
 		"default_icon": {
 			"16": "icons/16.png",
 			"48": "icons/48.png",
