Add allpage.js allpage.css

--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,12 @@
 			"run_at":"document_start",
 			"matches":["https://twitter.com/intent/tweet*","http://twitter.com/intent/tweet*"],
 			"js":["on_twitter_intent.js"]
+		},
+		{
+			"run_at": "document_end",
+			"matches": ["<all_urls>"],
+			"js": ["allpage.js"],
+			"css": ["allpage.css"]
 		}
 	],
 	"background": {
