--- a/manifest.json
+++ b/manifest.json
@@ -43,10 +43,7 @@
 		"page": "options.html"
 	},
 	"web_accessible_resources": [
-		{
-			"resources": ["assets/share.png"],
-			"matches": ["<all_urls>"]
-		}
+			"assets/share.png"
 	],
 	"permissions": ["storage"],
 	"author":"Alkappa/alpaca-honke",
