--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,9 @@
 {
 	"manifest_version": 3,
+    "default_locale": "en",
 	"name":"Twishare to Misskey",
 	"version":"0.2.6",
-	"description":"Twitter のシェアボタンから Misskey にシェアすることができるようにします。",
+	"description":"__MSG_Description__",
 	"icons":{
 		"16":"icons/16.png", 
 		"48":"icons/48.png",
@@ -30,7 +31,7 @@
 			"48": "icons/48.png",
 			"128": "icons/128.png"
 		},
-		"default_title": "Twishare to Misskeyの設定",
+		"default_title": "__MSG_PopupTitle__",
 		"default_popup": "options/options.html"
 	},
 	"options_ui": {
