manifest.jsonのbackgroundの設定を最適化

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -31,9 +31,7 @@
         }
     ],
     "background": {
-        "page": "",
-        "scripts": ["js_and_css/background.js"],
-        "type": "module"
+        "scripts": ["js_and_css/background.js"]
     },
     "action": {
         "default_icon": {
